# fastapi_scrapper

./: .env-sample  .env.example  .gitignore  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt
alembic/: env.py
alembic/versions/: 119bcee90ff6_create_books_table.py  6e4da0017c63_update_stock_field.py
app/: main.py
app/api/: books.py
app/core/db/: session.py
app/core/models/: __init__.py  book.py
app/core/settings/: __init__.py
app/models/: user.py
core/: database.py  settings.py
core/models/: __init__.py  user.py
